# fc-rust-bearer-example

./: Cargo.toml  README.md
src/: main.rs
